--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "babel src --out-dir dist --source-maps && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "babel src --out-dir dist --source-maps && devtool dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-plugin-transform-class-properties": "^6.11.5",
-    "babel-preset-latest": "^6.14.0"
+    "babel-preset-latest": "^6.14.0",
+    "devtool": "^2.2.0"
   }
 }
